import datetime
from . import db 

# Define the User model with fields for id, username, password hash, and date created
class User(db.Model):
    __tablename__ = 'users'
    id = db.Column(db.Integer, primary_key=True)
    username = db.Column(db.String(80), unique=True, nullable=False)
    password_hash = db.Column(db.String(128), nullable=False)
    date_created = db.Column(db.DateTime, default=lambda: datetime.datetime.now(datetime.timezone.utc))
    
# Define the User_Library model with fields for user_id, book_id, and date created
class User_Library(db.Model):
    __tablename__ = 'user_library'
    user_id = db.Column(db.Integer, db.ForeignKey('users.id'), primary_key=True)
    google_book_id = db.Column(db.String(120), db.ForeignKey('books.google_book_id'), primary_key=True)
    date_created = db.Column(db.DateTime, default=lambda: datetime.datetime.now(datetime.timezone.utc))
    
# Define the Book model with fields for google_book_id, title, authors, cover_image, buy_links and date created
class Book(db.Model):
    __tablename__ = 'books'
    google_book_id = db.Column(db.String(120), primary_key=True)
    title = db.Column(db.String(200), nullable=False)
    authors = db.Column(db.Text)
    cover_image = db.Column(db.String(200))
    buy_links = db.Column(db.Text)
    date_created = db.Column(db.DateTime, default=lambda: datetime.datetime.now(datetime.timezone.utc))
    
# Define the Review model with fields for review_id, user_id, book_id, rating, review_text and date created
class Review(db.Model):
    __tablename__ = 'reviews'
    review_id = db.Column(db.Integer, primary_key=True)
    user_id = db.Column(db.Integer, db.ForeignKey('users.id'), nullable=False)
    google_book_id = db.Column(db.String(120), db.ForeignKey('books.google_book_id'), nullable=False)
    rating = db.Column(db.Integer, nullable=False)
    review_text = db.Column(db.Text)
    date_created = db.Column(db.DateTime, default=lambda: datetime.datetime.now(datetime.timezone.utc))
    